Overflow fix

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,4 +1,3 @@
-/*
-Style Guide Lines. Remove if you prefer your own library
- */
-
+body, html {
+  overflow: normal;
+}
